# MovieLens-Delta-Lakehouse

./: .coverage  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: streamlit_sync.yml  tests.yml
README's/: DATA_MODEL.md  DQ_AND_LINEAGE.md  ENGINEERING_PATTERNS.md
bronze/: bronze_static_data_load.ipynb  databricks_job_creation_guide.md  historical_data_ingestion Job Guide.md  historical_data_load.ipynb  static_data_ingestion Job Guide
dashboard/: app.py  requirements.txt
dashboard/config/: icons.py  theme.py
dashboard/data/: .sync_manifest.json
dashboard/pages/: 1_Rating_Trends.py  2_Movies.py  3_Genres.py  4_User_Engagement.py  5_Content_DNA.py
dashboard/services/: data_loader.py  health.py  render_helpers.py  sync_data.py
docs/architecture/: architecture.md  data_model.md  dq_and_lineage.md
docs/pipelines/: pipeline_guide.md
docs/standards/: engineering_patterns.md
environment_setup/: environmentSetup.sql  external_location_setup_guide
scripts/: __init__.py  common.py
scripts/analytics/: kpi_export.py
scripts/bronze/: bronze_utils.py  historical_and_incremental_data_load.py  utils.py
scripts/environment_setup/: external_location_setup_guide.md
scripts/gold/: gold_utils.py  utils.py
scripts/maintenance/: maintenance_utils.py  table_maintenance.py  utils.py
scripts/silver/: __init__.py  silver_utils.py  utils.py
streamlit_app/: app.py  data_loader.py  sync_data.py  theme.py
streamlit_app/.streamlit/: config.toml
streamlit_app/pages/: 1_Rating_Trends.py  1_📈_Rating_Trends.py  2_Movies.py  2_🎬_Movies.py  3_Genres.py  3_🎭_Genres.py  4_User_Engagement.py  4_👥_User_Engagement.py  5_Content_DNA.py  5_🧬_Content_DNA.py
tests/: conftest.py
tests/helpers/: __init__.py  (+3 more)
(+179 files in other folders)
